deploy selasa sore

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "hugoplate",
-  "description": "hugo tailwindcss boilerplate",
+  "name": "susilodev",
+  "description": "susilodev blog",
   "version": "2.0.3",
   "license": "MIT",
-  "author": "zeon.studio",
+  "author": "indra susil",
   "scripts": {
     "dev": "hugo server",
     "build": "hugo --gc --minify --templateMetrics --templateMetricsHints --forceSyncStatic",
+    "watch:css": "npx tailwindcss -i ./assets/css/custom.css -o ./public/css/custom.css --watch",
     "preview": "hugo server --disableFastRender --navigateToChanged --templateMetrics --templateMetricsHints --watch --forceSyncStatic -e production --minify",
     "dev:example": "cd exampleSite && hugo server",
     "build:example": "cd exampleSite && hugo --gc --minify --templateMetrics --templateMetricsHints --forceSyncStatic",
