ready to deploy

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "indra susil",
   "scripts": {
     "dev": "hugo server",
-    "build": "hugo --gc --minify --templateMetrics --templateMetricsHints --forceSyncStatic",
     "watch:css": "npx tailwindcss -i ./assets/css/custom.css -o ./public/css/custom.css --watch",
+    "build:css": "npx tailwindcss -i ./assets/css/custom.css -o ./static/css/custom.css --minify",
+    "build": "hugo --gc --minify --templateMetrics --templateMetricsHints --forceSyncStatic",
     "preview": "hugo server --disableFastRender --navigateToChanged --templateMetrics --templateMetricsHints --watch --forceSyncStatic -e production --minify",
     "dev:example": "cd exampleSite && hugo server",
     "build:example": "cd exampleSite && hugo --gc --minify --templateMetrics --templateMetricsHints --forceSyncStatic",
@@ -27,5 +28,34 @@
     "prettier-plugin-go-template": "0.0.15",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.8"
+  },
+  "main": "tailwind.config.js",
+  "dependencies": {
+    "braces": "^3.0.3",
+    "cssesc": "^3.0.0",
+    "detect-libc": "^1.0.3",
+    "enhanced-resolve": "^5.18.1",
+    "fill-range": "^7.1.1",
+    "graceful-fs": "^4.2.11",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "jiti": "^2.4.2",
+    "lightningcss": "^1.29.1",
+    "lightningcss-darwin-arm64": "^1.29.1",
+    "lodash.castarray": "^4.4.0",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.merge": "^4.6.2",
+    "micromatch": "^4.0.8",
+    "mini-svg-data-uri": "^1.4.4",
+    "mri": "^1.2.0",
+    "node-addon-api": "^7.1.1",
+    "picocolors": "^1.1.1",
+    "picomatch": "^2.3.1",
+    "postcss-selector-parser": "^6.0.10",
+    "tapable": "^2.2.1",
+    "to-regex-range": "^5.0.1",
+    "ulid": "^2.3.0",
+    "util-deprecate": "^1.0.2"
   }
 }
