--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "hugo server",
     "watch:css": "npx tailwindcss -i ./assets/css/custom.css -o ./public/css/custom.css --watch",
     "build:css": "npx tailwindcss -i ./assets/css/custom.css -o ./static/css/custom.css --minify",
-    "build": "hugo --gc --minify --templateMetrics --templateMetricsHints --forceSyncStatic",
+    "build": "npm run build:css && hugo --gc --minify --templateMetrics --templateMetricsHints --forceSyncStatic",
     "preview": "hugo server --disableFastRender --navigateToChanged --templateMetrics --templateMetricsHints --watch --forceSyncStatic -e production --minify",
     "dev:example": "cd exampleSite && hugo server",
     "build:example": "cd exampleSite && hugo --gc --minify --templateMetrics --templateMetricsHints --forceSyncStatic",
