--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "yarn project-setup; yarn build"
+command = "npm project-setup; npm run build"
 
 [build.environment]
 HUGO_VERSION = "0.144.2"
